# bigInt

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  ReadMe.txt  executor.sh  markdown.md
3B/: bigInt2.cpp
include/menu/: CMakeLists.txt  menu.h
mains/: CMakeLists.txt  dlg.h  main.cpp
menu/: CMakeLists.txt  dlg.h  menu.h
src/3D/: CMakeLists.txt  main.cpp
src/3D/Class/: CMakeLists.txt  Printed_Circuit_Board.cpp  Printed_Circuit_Board.h
src/3D/Factory/: CMakeLists.txt  Factory.cpp  Factory.h
src/Dynamic/: CMakeLists.txt  Constructors.h  Utils.h  bigInt.cpp  bigInt.h  bigInt2.cpp  bigInt2.h  functions.h  myVector.h  translator.h
src/Graphics/include/: CMakeLists.txt  but.cpp  but.h
src/Graphics/src/: CMakeLists.txt  common.cpp  errors.h  main.cpp  menu.cpp  menu.h  second.cpp  second.h
src/Static/: CMakeLists.txt  Constructors.h  bigInt.cpp  bigInt.h  functions.h  myVector.h
src/UnitTests/: CMakeLists.txt  test.cpp  test_dynamic.cpp
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
