cmake_minimum_required(VERSION 3.8)

project(cmake_tur)
set(CMAKE_CXX_STANDARD 20)
set(VAR 3)
if(${VAR} EQUAL 1) #1 - 3A | 2 - 3A(TEST) | 3 - 3B | 4 - 3B(TEST)
    enable_testing()
    add_subdirectory(googletest)
    add_subdirectory(src/Static)
    add_subdirectory(src/UnitTests)
elseif(${VAR} EQUAL 2)
    add_subdirectory(src/Static)
    add_subdirectory(include/menu)
    add_subdirectory(src/main)
elseif(${VAR} EQUAL 3)
    add_subdirectory(src/Dynamic)
    add_subdirectory(include/menu)
    add_subdirectory(src/main)
elseif(${VAR} EQUAL 4)
    enable_testing()
    add_subdirectory(googletest)
    add_subdirectory(src/Dynamic)
   # add_subdirectory(src/Static)
    add_subdirectory(src/UnitTests)
elseif(${VAR} EQUAL 5)
    set(CMAKE_PREFIX_PATH "C:\\Qt\\Qt5.12.10\\5.12.10\\msvc2017_64\\lib\\cmake")
    set(Qt5_DIR "C:\\Qt\\Qt5.12.10\\5.12.10\\msvc2017_64\\lib\\cmake\\Qt5")
    add_subdirectory(src/Graphics/include)
    add_subdirectory(src/Graphics/src)
endif()
